# ascii2graph

./: .travis.yml  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
ascii2graph/: __init__.py  errors.py  graph.py  version.py
