[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ascii2graph"
authors = [
    {name = "Radovan Bast", email = "radovan.bast@uit.no"},
]
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[project.urls]
Home = "https://github.com/bast/ascii2graph"
